domains/src/ebook_snapshots/repositories/snapshots/domains__ebook_snapshots__repositories__scraper__tests__get-2.snap
---
source: domains/src/ebook_snapshots/repositories/scraper.rs
expression: actual.payment_real
---
Some(
    Payment {
        price: "3520",
        points: "106",
    },
)
