domains/src/ebook_snapshots/repositories/snapshots/domains__ebook_snapshots__repositories__scraper__tests__get.snap
---
source: domains/src/ebook_snapshots/repositories/scraper.rs
expression: actual.payment_ebook
---
Some(
    Payment {
        price: "3344",
        points: "152",
    },
)
